--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   flutter_spinkit: ^5.2.1
   carousel_slider: ^4.2.1
   insta_image_viewer: ^1.0.4
+  youtube_player_flutter: ^9.0.1
+  social_media_flutter: ^0.0.2
+
   # Internationalization & Localization
   intl: ^0.19.0
 
@@ -45,6 +48,9 @@ dependencies:
   flutter_smart_dialog: ^4.9.7
   envied: ^0.5.4+1
 
+  # Information about an application package
+  package_info_plus: ^8.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +63,7 @@ flutter:
 
   assets:
     - assets/images/icon/
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
